--- a/collab6.qmd
+++ b/collab6.qmd
@@ -9,4 +9,4 @@ This is a collaborative Quarto project.
 
 # Contributions
 
-<!-- Student sections will go here --> 
+hello this is my second change (me = siddhi)
